--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
     <section class="about">
         <h2>About</h2>
         <p>
-            Currently a software engineer at <a href="https://apainsurance.org/">APA Insurance</a>.
-            Worked previously as a product engineer for <a href="https://africastalking.com/">Africastalking</a> and
+            Currently a software engineer at <a href="https://bringglobal.com/">Bring Global</a>.
+            Worked previously as a senior software engineer at <a href="https://www.apainsurance.org">APA Insurance</a>,
+            product engineer for <a href="https://africastalking.com/">Africastalking</a> and
             lead Android engineer for <a href="http://e-limu.org/">E-limu</a>.
             Worked also as volunteer at <a href="https://www.agakhanhospitals.org/Nairobi">Aga Khan University
             Hospital</a>
@@ -115,15 +116,6 @@
             <p>
                 A recipe mobile application with lots of recipes ranging from vegetarian, non-vegetarian, seafood to
                 drinks with an African touch.
-            </p>
-        </div>
-        <div>
-            <h3>
-                <a href="https://play.google.com/store/apps/details?id=com.weetkit.gchallenge.app">gChallenge</a>
-            </h3>
-            <p>
-                It's a competitive quiz based application that tests one's knowledge about a vast array of topics
-                and subjects with the aim of educating people on different topics and current affairs.
             </p>
         </div>
         <a href="https://github.com/gordonpassy" style="color:#ab47bc;"
